--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,5 @@
 @import url('./resetStyle.css');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap');
 
 #root {
     height: 100%;
@@ -8,6 +9,7 @@
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    background-color: rgb(239, 239, 239);
 }
 
 .container {
@@ -20,17 +22,84 @@
 // HEADER ================================================================================
 .header {
     flex: 0 0 80px;
+    background-color: rgb(86, 196, 243);
+    box-shadow: 0px 3px 2px #999;
+    position: relative;
 
     // .header__row
     &__row {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 
     // .header__title
     &__title {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 30px;
+        color: #fff;
+        font-weight: 700;
+        font-style: italic;
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
+    }
+
+    &__rules {
+        background-color: rgb(235, 235, 235);
+        padding: 3px 5px;
+        border-radius: 5px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 300px;
+        color:rgb(2, 177, 136);
+        box-shadow: 0px 0px 4px 1px #555;
+        opacity: 0;
+        visibility: hidden;
+
+        & p {
+            line-height: 130%;
+        }
+    }
+
+    &__hover-to-read {
+        font-size: 14px;
+        font-style: normal;
+        color: red;
+        cursor: default;
+        position: relative;
+        
+        &:hover {
+            & .header__rules {
+                opacity: 1;
+                visibility: visible;
+            }
+        } 
     }
 
     // .header__control-buttons
     &__control-buttons {
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
+
+        & button {
+            border: 1px solid #333;
+            border-radius: 3px;
+            padding: 3px 5px;
+            color: #fff;
+            background-color: #333;
+            cursor: pointer;
+            box-shadow: 2px 2px 4px #999;
+            transition: all 0.3s ease-in-out 0s;
+            
+            &:hover {
+                box-shadow: 0px 0px 2px 1px #fff;
+            }
+        }
+
     }
 }
 
@@ -48,35 +117,115 @@
 // MAIN ==================================================================================
 .content {
     flex: 1 0 auto;
+    padding: 20px 0;
+    background-color: rgb(220, 167, 22);
+
     // .content__row
     &__row {
-
     }
 }
 
 // Gameboard ==================================================================================
 .gameboard {
-    
+    height: 100%;
+    display: grid;
+    justify-content: center;
+    gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 250px));
+    grid-template-rows: repeat(auto-fit, 1fr);
+    padding: 20px 10px;
+    border-radius: 5px;
+
     // .gameboard__card
     &__card {
 
     }
 }
 
-.footer {
+.card {
+    display: flex;
+    border-radius: 3px;
+    overflow: hidden;
 
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(228, 228, 228);
+    box-shadow: 2px 2px 3px #333;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out 0s;
+    &:hover {
+        box-shadow: 0px 0px 3px 3px rgb(7, 227, 176);
+    }
+
+    &__image {
+        flex: 0 0 100px;
+        & img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__title {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 5px 0;
+        background-color: #fff;
+        width: 100%;
+    }
+}
+
+// Scoreboard ==================================================================================
+.scoreboard {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 20px 10px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: 50px;
+
+    // .scoreboard div
+    &__div {
+
+    }
+}
+
+// HEADER ================================================================================
+.footer {
+    flex: 0 0 80px;
+    background-color: rgb(86, 196, 243);
+    box-shadow: 0px -3px 2px #999;
     // .footer__row
     &__row {
-
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     // .footer__title
     &__title {
-
+        font-family: 'Open Sans', sans-serif;
+        font-size: 20px;
+        color: #fff;
+        font-weight: 700;
+        font-style: italic;
     }
 
     // .footer__link
     &__link {
+        text-decoration: none;
+        color: rgb(247, 158, 14);
+        transition: all 0.3s ease-in-out 0s;
 
+        &:hover {
+            color: rgb(251, 255, 0);
+            text-decoration: underline;
+        }
     }
 }
