--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -39,6 +39,7 @@
   display: flex;
   flex-direction: column;
   row-gap: 10px;
+  cursor: default;
 }
 .header__rules {
   background-color: rgb(235, 235, 235);
