--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -44,6 +44,7 @@
         display: flex;
         flex-direction: column;
         row-gap: 10px;
+        cursor: default;
     }
 
     &__rules {
