--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,6 +52,7 @@
         padding: 3px 5px;
         border-radius: 5px;
         position: absolute;
+        z-index: 2;
         top: 0;
         left: 0;
         width: 300px;
@@ -118,14 +119,27 @@
 // MAIN ==================================================================================
 .content {
     flex: 1 0 auto;
-    padding: 20px 0;
     background-color: rgb(220, 167, 22);
+    position: relative;
 
     // .content__row
     &__row {
     }
 }
 
+.blur {
+    position: relative;
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0.7;
+        background-color: #333;
+    }
+}
 // Gameboard ==================================================================================
 .gameboard {
     height: 100%;
@@ -175,6 +189,63 @@
         padding: 5px 0;
         background-color: #fff;
         width: 100%;
+    }
+}
+
+// Gameover ==================================================================================
+.gameover { 
+    position: absolute;
+    background-color: rgb(48, 222, 9);
+    border-radius: 10px;
+    overflow: hidden;
+    width: 400px;
+    height: 220px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 3px 3px 5px 2px rgb(203, 203, 203);
+    left: calc(50% - 400px / 2);
+    top: calc(50% - 220px / 2);
+    &__column {
+        display: flex;
+        flex-direction: column;
+        row-gap: 10px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__title {
+        font-size: 32px;
+        color: #fff;
+        font-weight: 700;
+    }
+
+    &__score {
+        font-size: 22px;
+        color: #fff;
+        font-weight: 400;
+    }
+
+    &__bestscore {
+        font-size: 26px;
+        font-weight: 700;
+        color: rgb(183, 0, 255);
+        text-align: center;
+    }
+
+    &__new-game {
+        border: 1px solid #333;
+        border-radius: 3px;
+        padding: 3px 5px;
+        color: #fff;
+        background-color: #333;
+        cursor: pointer;
+        box-shadow: 2px 2px 4px #999;
+        transition: all 0.3s ease-in-out 0s;
+        
+        &:hover {
+            box-shadow: 0px 0px 2px 1px #fff;
+        }
     }
 }
 
